changed container dimensions

--- a/about/about.html
+++ b/about/about.html
@@ -46,7 +46,7 @@
 </head>
 <body>
 
-    <div class="container" style="display:none">
+    <div class="container" style="display:none;width:900px">
         <a href="../index.html"class="close lavender" style="color:white">
             <i class="fa fa-close close-icon"></i>
         </a>
