--- a/code/content/personalsite.html
+++ b/code/content/personalsite.html
@@ -38,7 +38,7 @@
         <i class="fa fa-close close-icon"></i>
     </a>
     <h1 class="section-title"> Personal Portfolio Rebuild</h1>
-    <h4 class="section-subtitle"> I built the previous iteration of my personal site
+    <h4 class="section-subtitle sub"> I built the previous iteration of my personal site
       up from sratch when I was just becoming familiar with web development. Although
       it was very rewarding to start with blank HTML, stylesheets, and scripts and then
       StackOverflow my way through every obstacle I encountered, my from-the-ground-up
@@ -50,8 +50,7 @@
       Things to look forward to: command-line inspired user interface, more hidden animations,
       and enhanced responsiveness.
     </h4>
-        <div class="full-image"><img src="../../partials/images/code/personal.png"></div>
-        <div class="content-text">
-        </div>
+    <div class="full-image" style="margin-bottom:150px"><img src="../../partials/images/code/personal.png"></div>
+
 
 </div>
