--- a/code/content/stubhub.html
+++ b/code/content/stubhub.html
@@ -40,22 +40,25 @@
         <i class="fa fa-close close-icon"></i>
     </a>
     <h1 class="section-title"> StubHub Community</h1>
-    <h4 class="section-subtitle"> As an eBay intern during Summer 2017, I worked as a part
+    <h4 class="section-subtitle sub"> As an <a href="https://www.ebay.com/" target="_blank">eBay</a> intern during Summer 2017, I worked as a part
       of StubHub's Search Infrastructure engineering team. In addition to contributing towards
-      thr SI team by developing for UI engineering stories using the Scrum framework, I also
+      the SI team by developing for UI engineering stories using the <a href="https://www.scrum.org/resources/what-is-scrum" target="_blank">Scrum</a> framework, I also
       created and then developed a community platform for StubHub users. The platform aims to
-      increase engagement on StubHub through a data-oriented approach with impact in customer
+      increase engagement on <a href="https://www.stubhub.com/" target="_blank">StubHub</a> through a data-oriented approach with impact in customer
       service efficiency, partnerships, and search engine optimization.
       <br>
       <br>
-      I used techologies such as internal JavaScript libraries, Dust, RequireJS, Sass, HTML,
+      I used techologies such as internal JavaScript libraries,
+      <a href="http://www.dustjs.com/" target="_blank">Dust</a>,
+      <a href="http://requirejs.org/" target="_blank">RequireJS</a>,
+      <a href="http://sass-lang.com/" target="blank">Sass</a>, HTML,
       and JavaScript, as well as analytics tracking & A/B testing implementation, performance
       testing, cross-browser quality assurance, loacalization, and several external SDKs in both
       Web and mobile Web.
     </h4>
-        <div class="half-image" style="height:700px"><img src="../../partials/images/code/stubhub/com1.png" style="width:85%"></div>
-        <div class="half-image" style="height:700px"><img src="../../partials/images/code/stubhub/com2.png" style="width:85%"></div>
-        <div class="content-text">
+        <div class="half-image" style="height:620px;background:#75c4bd"><img src="../../partials/images/code/stubhub/com1.png" style="width:70%"></div>
+        <div class="half-image" style="height:620px;background:#75c4bd"><img src="../../partials/images/code/stubhub/com2.png" style="width:70%"></div>
+        <div class="content-text" style="margin-bottom:150px">
             The main goal of the community feature is to collect user-generated content
             and then utilize it to augment the end-to-end user experience. I worked closely
             with product designers, user reserchers, analytics teams, customer service
@@ -70,7 +73,7 @@
             <br>
             <br>
             Through this experience in which I regularly wrote and deployed
-            production- integrated code and pitched my development to high-stake company leaders on
+            production-integrated code and pitched my development to high-stake company leaders on
             almost a daily basis, I have developed a technical skill set in ideating, producing, and
             leading at high efficiency rates.
         </div>
