--- a/design/content/berkeleymap.html
+++ b/design/content/berkeleymap.html
@@ -48,6 +48,6 @@
       </h4>
       <div class="full-image" style="background-color:#b0d3ab;height:400px"><img src="../../partials/images/design/innod/doe.png"></div>
       <div class="full-image" style="background-color:#b0d3ab;height:400px"><img src="../../partials/images/design/innod/south.png"></div>
-      <div class="full-image" style="background-color:#b0d3ab;height:400px"><img src="../../partials/images/design/innod/tech.png"></div>
+      <div class="full-image" style="background-color:#b0d3ab;height:400px;margin-bottom:150px"><img src="../../partials/images/design/innod/tech.png"></div>
   </div>
 </body>
