--- a/design/content/doodles.html
+++ b/design/content/doodles.html
@@ -46,6 +46,6 @@
         belong to a category or series, but were fun to create nonetheless.
       </h4>
       <div class="full-image"><img src="../../partials/images/design/handson.png"></div>
-      <div class="half-image" style="background-color:#a9d396"><img src="../../partials/images/design/doodles/avocado.png" style="width:400px"></div>
+      <div class="half-image" style="background-color:#a9d396;margin-bottom:150px"><img src="../../partials/images/design/doodles/avocado.png" style="width:400px"></div>
   </div>
 </body>
