--- a/design/content/feaster.html
+++ b/design/content/feaster.html
@@ -40,7 +40,7 @@
           <i class="fa fa-close close-icon"></i>
       </a>
       <h1 class="section-title"> Feaster</h1>
-      <h4 class="section-subtitle sub"> In May of 2016, I began working with Feaster, a digital marketing platform in the
+      <h4 class="section-subtitle sub"> In May of 2016, I began working with <a href="https://www.feasterworks.com/" target="_blank">Feaster</a>, a digital marketing platform in the
         restaurant industry that provides customers with personalized, preference-based offers on local food and drink
         in real-time. Feaster is a startup that came out of UC Berkeley, and my main role was to create all of the branding
         and marketing material for the company. I additionally designed and engineered the user experience of landing pages
@@ -50,7 +50,7 @@
       <div class="full-image" style="background-color:#edb7bf"><img src="../../partials/images/design/feaster.png"></div>
       <div class="full-image" style="background-color:;height:300px"><img src="../../partials/images/design/feaster/cover.png"></div>
       <div class="full-image" style="background-color:;height:300px"><img src="../../partials/images/design/feaster/cover2.png"></div>
-      <div class="half-image"><img src="../../partials/images/design/feaster/feaster4.png"></div>
-      <div class="half-image"><img src="../../partials/images/design/feaster/feaster4.png"></div>
+      <div class="half-image" style="margin-bottom:150px;height:285px"><img src="../../partials/images/design/feaster/feaster4.png"></div>
+      <div class="half-image" style="margin-bottom:150px;height:285px"><img src="../../partials/images/design/feaster/feaster4.png"></div>
   </div>
 </body>
