--- a/design/content/innod.html
+++ b/design/content/innod.html
@@ -40,7 +40,7 @@
         <i class="fa fa-close close-icon"></i>
     </a>
       <h1 class="section-title"> Marketing Tier - Innovative Design </h1>
-      <h4 class="section-subtitle sub"> Innovative Design is Berkeley's premier student-run creative agency that
+      <h4 class="section-subtitle sub"> <a href="https://innovativedesign.club/" target="_blank">Innovative Design</a> is Berkeley's premier student-run creative agency that
         does graphic design work, photography, web development, and more for a wide array of both campus
         organizations and off-campus clientele. InnoD makes Berkeley beuatiful, and Marketing Tier makes
         InnoD beautiful! I've been on Marekting Tier for the past two semesters, and have helped ideate, develop,
@@ -52,11 +52,11 @@
       <div class="half-image" style="background-color:#bce2de"><img src="../../partials/images/design/innod/banquet_front.png"></div>
       <div class="half-image" style="background-color:#bce2de"><img src="../../partials/images/design/innod/banquet_back.png"></div>
       <div class="half-image" style="background-color:#0693c0"><img src="../../partials/images/design/innod/desklogo.png" style="width:380px"></div>
-      <div class="half-image"><img src="../../partials/images/design/innod/thankyou.png"></div>
+      <div class="half-image" style="background-color:#a9dae7"><img src="../../partials/images/design/innod/thankyou.png"></div>
       <div class="half-image" style="background-color:#c7e3d4"><img src="../../partials/images/design/innod/dark_mountain.png" style="width:340px"></div>
       <div class="half-image" style="background-color:#add8bf"><img src="../../partials/images/design/innod/light_mountain.png" style="width:340px"></div>
       <div class="full-image" style="height:320px"><img src="../../partials/images/design/innod/flyersall.png"></div>
-      <div class="half-image" style="background-color:#96cdb0"><img src="../../partials/images/design/innod/valentine.png" style="width:610px"></div>
-      <div class="half-image" style="background-color:#c7e3d4"><img src="../../partials/images/design/innod/hex.png" style="width:340px"></div>
+      <div class="half-image" style="background-color:#96cdb0;margin-bottom:150px"><img src="../../partials/images/design/innod/valentine.png" style="width:610px"></div>
+      <div class="half-image" style="background-color:#c7e3d4;margin-bottom:150px"><img src="../../partials/images/design/innod/hex.png" style="width:340px"></div>
   </div>
 </body>
