--- a/design/content/laudem.html
+++ b/design/content/laudem.html
@@ -44,6 +44,6 @@
         everyday settings and environments. I designed the user interface of the app, as well as all
         branding and marketing materials.
       </h4>
-      <div class="full-image"><img src="../../partials/images/design/laudem.png"></div>
+      <div class="full-image" style="margin-bottom:150px"><img src="../../partials/images/design/laudem.png"></div>
   </div>
 </body>
