--- a/design/content/valentine.html
+++ b/design/content/valentine.html
@@ -44,7 +44,7 @@
         is to make Valentine's Day card in the spring and hand them out on Sproul with candy to spread a
         little love. Below are a couple of the cards that I made and were handed out on campus.
       </h4>
-      <div class="half-image"><img src="../../partials/images/design/circuit.png"></div>
-      <div class="half-image"><img src="../../partials/images/design/innod/valentine.png"></div>
+      <div class="half-image" style="background-color:#dfa7b5"><img src="../../partials/images/design/circuit.png"></div>
+      <div class="half-image" style="background-color:#97ccb1"><img src="../../partials/images/design/innod/valentine.png"></div>
   </div>
 </body>
