--- a/design/design.html
+++ b/design/design.html
@@ -70,7 +70,7 @@
               <div class="preview-layover">
                   CAL HACKS 4.0
               </div>
-              <img src="../partials/images/design/chroadtrip.png" style="margin-top:10px">
+              <img src="../partials/images/design/chroadtrip.png" style="margin-top:26px">
           </div>
         </a>
         <a href="content/sushi.html" class="transition">
@@ -82,7 +82,7 @@
           </div>
         </a>
         <a href="content/doodles.html" class="transition">
-          <div class="preview">
+          <div class="preview" style="background-color:#9ccfcc">
               <div class="preview-layover">
                   Doodles
               </div>
@@ -110,7 +110,7 @@
               <div class="preview-layover">
                   InnoD Marketing
               </div>
-                <img src="../partials/images/design/innod2.png">
+                <img src="../partials/images/design/innod2.png" class="height">
           </div>
         </a>
         <a href="content/cubcon.html" class="transition">
