--- a/prototyping/content/mo.html
+++ b/prototyping/content/mo.html
@@ -39,7 +39,7 @@
     <a href="../prototyping.html"class="close lavender" style="color:white">
         <i class="fa fa-close close-icon"></i>
     </a>
-    <h1 class="section-title"> Mo - An Angile Tread Robot </h1>
+    <h1 class="section-title"> Mo - An Agile Tread Robot </h1>
     <h4 class="section-subtitle sub"> As both an engineer and a designer, prototyping is for me one of the
       most rewarding forms of art. In spring 2017, I took a class at UC Berkeley's <a href="http://jacobsinstitute.berkeley.edu/our-space/" target="_blank">Jacobs Institute for Design Innovation</a> on
       prototyping and fabrication where my final project was to design, engineer, build, and program a Bluetooth-controlled
@@ -53,7 +53,7 @@
       Below, I have created a walk-through of my creative engineering process that went behind the creation of Mo, along with some
       videos of Mo in action!
     </h4>
-        <div class="full-image">
+        <div class="full-image" style="height:450px">
           <video width="100%" height="100%" autoplay loop muted>
               <source src="../../partials/images/prototyping/mo/spin.m4v" type="video/mp4">
               Your browser does not support the video tag.
@@ -78,8 +78,8 @@
             user-friendly 3D printer. All of my tweaking, precise measuring, and iterating paid off when I ended up with the
             compact and flush chassis shown below.
         </div>
-        <div class="half-image"><img src="../../partials/images/prototyping/mo/open.png"></div>
-        <div class="half-image"><img src="../../partials/images/prototyping/mo/closed.png"></div>
+        <div class="half-image" style="height:300px"><img src="../../partials/images/prototyping/mo/open.png"></div>
+        <div class="half-image" style="height:300px"><img src="../../partials/images/prototyping/mo/closed.png"></div>
         <div class="content-text">
             Since one of the main challeneges in the final exam obstacle course was a steeply-inclined ramp
             that needed to be both ascended and descended, I decided to engineer Mo as a tread-based robot in order to be able to face the
@@ -95,9 +95,9 @@
             I designed the lead gears to attach to the motors that nested in Mo's chassis, so the treads were firmly connected to the chassis body
             while also being easily adjustable as shown below.
         </div>
-        <div class="third-image"><img src="../../partials/images/prototyping/mo/off.png"></div>
-        <div class="third-image"><img src="../../partials/images/prototyping/mo/mid.png"></div>
-        <div class="third-image"><img src="../../partials/images/prototyping/mo/on.png"></div>
+        <div class="third-image" style="height:200px"><img src="../../partials/images/prototyping/mo/off.png"></div>
+        <div class="third-image" style="height:200px"><img src="../../partials/images/prototyping/mo/mid.png"></div>
+        <div class="third-image" style="height:200px"><img src="../../partials/images/prototyping/mo/on.png"></div>
         <div class="content-text">
             One of my goals throughout the process of constructing the robot was to make all of the parts structurally reliable while allowing for
             flexibility. As such, I compartamentalized Mo's design in order to allow for an easy take-apart process to facilitate debugging, electronic
@@ -106,7 +106,7 @@
             <br></br>
             In the video below I have provided a quick demo of Mo's sturdy decomposability.
         </div>
-        <div class="full-image">
+        <div class="full-image" style="height:450px">
           <video width="100%" height="100%" autoplay loop muted>
               <source src="../../partials/images/prototyping/mo/demo.m4v" type="video/mp4">
               Your browser does not support the video tag.
@@ -116,7 +116,7 @@
             Mo is controllable completely via Bluetooth thanks to an <a href="https://www.adafruit.com/product/2479" target="_blank"> Adafruit Bluefruit</a> module
             that I programmed into Mo's circuit board. I coded the controls into an app for both iOS and Android devices.
         </div>
-        <div class="full-image" style="margin-top:-20px">
+        <div class="full-image" style="height:450px">
           <video width="100%" height="100%" autoplay loop muted>
               <source src="../../partials/images/prototyping/mo/go.m4v" type="video/mp4">
               Your browser does not support the video tag.
@@ -125,11 +125,11 @@
         <div class="content-text">
             After programming Mo's controls, I decided to add a ring of <a href="https://www.adafruit.com/product/1463" target="_blank"> neopixels</a>
             to each of Mo's tread wheels that make chasing patterns to correspond with different actions. All of Mo's code was written in the
-            <a href="https://www.arduino.cc/en/Main/Software" target="_blank"> Arduino IDE</a>. Check out my code for this project on <a href="https://github.com/adrianababakanian/mo_code" target="_blank">Github</a>.
+            <a href="https://www.arduino.cc/en/Main/Software" target="_blank"> Arduino IDE</a>. Check out my code for this project on <a href="https://github.com/adrianababakanian/mo_code" target="_blank">GitHub</a>.
         </div>
-        <div class="third-image"><img src="../../partials/images/prototyping/mo/glow_1.png"></div>
-        <div class="third-image"><img src="../../partials/images/prototyping/mo/neo.png"></div>
-        <div class="third-image"><img src="../../partials/images/prototyping/mo/glow_2.png"></div>
+        <div class="third-image" style="height:200px"><img src="../../partials/images/prototyping/mo/glow_1.png"></div>
+        <div class="third-image" style="height:200px"><img src="../../partials/images/prototyping/mo/neo.png"></div>
+        <div class="third-image" style="height:200px"><img src="../../partials/images/prototyping/mo/glow_2.png"></div>
         <div class="content-text" style="padding-bottom:150px">
             Special thanks to the team and resources at the <a href="http://invent.citris-uc.org/" target="_blank">CITRIS Invention Lab</a> for the support and assistance that
             made this project possible and for giving me a lab to call home for the semester!
