--- a/prototyping/content/pond.html
+++ b/prototyping/content/pond.html
@@ -55,14 +55,14 @@
         <br></br>
         Once all pieces were cut and engraved, I sanded down all of the pieces to remove the resiude and burn marks left by the laser.
     </div>
-    <div class="half-image"><img src="../../partials/images/prototyping/pond/fish.png"></div>
-    <div class="half-image"><img src="../../partials/images/prototyping/pond/parts.png"></div>
+    <div class="half-image" style="height:300px"><img src="../../partials/images/prototyping/pond/fish.png"></div>
+    <div class="half-image" style="height:300px"><img src="../../partials/images/prototyping/pond/parts.png"></div>
     <div class="content-text">
         The process of adhering all components to the base board was very intricate, since a slight error would have resulted in the
         gears catching or mislaligning. As such, I laid out and traced all pieces onto the base before beginning any permanent adhesion.
         All gears were attached via nut and bolt, whose placement I marked in order to make the appropriate drill holes.
     </div>
-    <div class="half-image"><img src="../../partials/images/prototyping/pond/two.png"></div>
-    <div class="half-image"><img src="../../partials/images/prototyping/pond/four.png"></div>
+    <div class="half-image" style="height:300px"><img src="../../partials/images/prototyping/pond/two.png"></div>
+    <div class="half-image" style="height:300px"><img src="../../partials/images/prototyping/pond/four.png"></div>
     <div class="full-image" style="margin-bottom:150px"><img src="../../partials/images/prototyping/pond/holes.png"></div>
 </div>
