--- a/prototyping/prototyping.html
+++ b/prototyping/prototyping.html
@@ -62,7 +62,7 @@
                   <div class="preview-layover">
                       Mo: an agile tread robot
                   </div>
-                  <img src="../partials/images/prototyping/mo.png">
+                  <img src="../partials/images/prototyping/mo.png" class="height">
               </div>
           </a>
           <a href="content/pond.html" class="transition">
@@ -70,7 +70,7 @@
                   <div class="preview-layover">
                       Pond in geared motion
                   </div>
-                  <img src="../partials/images/prototyping/koi.png">
+                  <img src="../partials/images/prototyping/koi.png" class="height">
               </div>
           </a>
           <a href="content/kirigami.html" class="transition">
@@ -78,15 +78,15 @@
                   <div class="preview-layover">
                       Breathing kirigami
                   </div>
-                  <img src="../partials/images/prototyping/origami.png">
+                  <img src="../partials/images/prototyping/origami.png" class="height">
               </div>
           </a>
           <a href="content/drawing.html" class="transition">
               <div class="preview bottom">
                   <div class="preview-layover">
-                      Circumferential drawing machine
+                      Drawing machine
                   </div>
-                  <img src="../partials/images/prototyping/drawing.png">
+                  <img src="../partials/images/prototyping/drawing.png" class="height">
               </div>
           </a>
   </div>
