--- a/code/code.html
+++ b/code/code.html
@@ -69,7 +69,8 @@
         </div>
         </a>
         <a href="content/personalsite.html" class="transition">
-            <div class="preview">
+            <div class="preview" style="background-color: linear-gradient(to left, transparent 0%,#fff 50%,transparent 100%);
+            background: -webkit-linear-gradient(-60deg, rgba(204, 178, 213, 0.9), rgba(189, 104, 170, 0.7), rgba(240, 166, 178, 1) 70%);">
                 <div class="preview-layover">
                     Personal Site Rebuild
                 </div>
