--- a/design/content/cubcon.html
+++ b/design/content/cubcon.html
@@ -47,11 +47,11 @@
         tech clubs geared torwards hackers with little or no experience. I chose to market the
         event in a pixelated, video-game-inspired style.
       </h4>
-      <div class="full-image" style="height:360px"><img src="../../partials/images/design/cubcon/cubcon_cover.png"></div>
-      <div class="half-image" style="height:300px;background-color:#e1f3fa"><img src="../../partials/images/design/cubcon/front.png"></div>
-      <div class="half-image" style="height:300px;background-color:#e1f3fa"><img src="../../partials/images/design/cubcon/back.png"></div>
-      <div class="third-image" style="background-color:#b1e3f7"><img src="../../partials/images/design/cubcon/laptop.png" style="width:250px"></div>
-      <div class="third-image" style="background-color:#e1f3fa"><img src="../../partials/images/design/cubcon/title.png" style="width:250px"></div>
-      <div class="third-image" style="background-color:#b1e3f7"><img src="../../partials/images/design/cubcon/rocket.png" style="width:120px"></div>
+      <div class="full-image" style="height:300px"><img src="../../partials/images/design/cubcon/cubcon_cover.png"></div>
+      <div class="half-image" style="height:265px;background-color:#e1f3fa"><img src="../../partials/images/design/cubcon/front.png"></div>
+      <div class="half-image" style="height:265px;background-color:#e1f3fa"><img src="../../partials/images/design/cubcon/back.png"></div>
+      <div class="third-image" style="background-color:#b1e3f7;margin-bottom:150px"><img src="../../partials/images/design/cubcon/laptop.png" style="width:250px"></div>
+      <div class="third-image" style="background-color:#e1f3fa;margin-bottom:150px"><img src="../../partials/images/design/cubcon/title.png" style="width:250px"></div>
+      <div class="third-image" style="background-color:#b1e3f7;margin-bottom:150px"><img src="../../partials/images/design/cubcon/rocket.png" style="width:120px"></div>
   </div>
 </body>
