--- a/prototyping/content/drawing.html
+++ b/prototyping/content/drawing.html
@@ -43,7 +43,7 @@
       designing and piecing together gears from Illustrator files. I ended up laser cutting a small pen holder and attaching the prototype
       to a DC motor to get the device shown below, and then decided to turn it into a drawing machine that operates by using a photoresistor.
     </h4>
-    <div class="full-image">
+    <div class="full-image" style="height:450px">
       <video width="100%" height="100%" autoplay loop muted>
           <source src="../../partials/images/prototyping/drawing/intro.m4v" type="video/mp4">
           Your browser does not support the video tag.
