image fade on load

--- a/prototyping/prototyping.html
+++ b/prototyping/prototyping.html
@@ -58,7 +58,7 @@
       <h4 class="section-subtitle"> Some visual manifestations of my passions for both engineering and art in the form of
             bluetooth-controlled robots, drawing machines, geared ponds, and more. </h4>
           <a href="content/mo.html" class="transition">
-              <div class="preview">
+              <div class="preview" style="background-color:#ddaabb">
                   <div class="preview-layover">
                       Mo: an agile tread robot
                   </div>
@@ -66,7 +66,7 @@
               </div>
           </a>
           <a href="content/pond.html" class="transition">
-              <div class="preview">
+              <div class="preview" style="background-color:#d7d6ec">
                   <div class="preview-layover">
                       Pond in geared motion
                   </div>
@@ -74,7 +74,7 @@
               </div>
           </a>
           <a href="content/kirigami.html" class="transition">
-              <div class="preview bottom">
+              <div class="preview bottom" style="background-color:#c5d3ec">
                   <div class="preview-layover">
                       Breathing kirigami
                   </div>
@@ -82,7 +82,7 @@
               </div>
           </a>
           <a href="content/drawing.html" class="transition">
-              <div class="preview bottom">
+              <div class="preview bottom" style="background-color:#efa3a3">
                   <div class="preview-layover">
                       Drawing machine
                   </div>
