added bottom back navigation to all content pages

--- a/code/content/stubhub.html
+++ b/code/content/stubhub.html
@@ -58,7 +58,7 @@
     </h4>
         <div class="half-image" style="height:620px;background:#75c4bd"><img src="../../partials/images/code/stubhub/com1.png" style="width:70%"></div>
         <div class="half-image" style="height:620px;background:#75c4bd"><img src="../../partials/images/code/stubhub/com2.png" style="width:70%"></div>
-        <div class="content-text" style="margin-bottom:150px">
+        <div class="content-text">
             The main goal of the community feature is to collect user-generated content
             and then utilize it to augment the end-to-end user experience. I worked closely
             with product designers, user reserchers, analytics teams, customer service
@@ -76,6 +76,13 @@
             production-integrated code and pitched my development to high-stake company leaders on
             almost a daily basis, I have developed a technical skill set in ideating, producing, and
             leading at high efficiency rates.
+        </div>
+        <div class="back-button">
+          <a href="../code.html" class="back-hover">
+            <i class="fa fa-chevron-up buffer" aria-hidden="true"></i>
+            <br>
+            <div class="eighteen">back to code</div>
+          </a>
         </div>
 
 </div>
