--- a/design/content/cubcon.html
+++ b/design/content/cubcon.html
@@ -50,8 +50,15 @@
       <div class="full-image" style="height:300px"><img src="../../partials/images/design/cubcon/cubcon_cover.png"></div>
       <div class="half-image" style="height:265px;background-color:#e1f3fa"><img src="../../partials/images/design/cubcon/front.png"></div>
       <div class="half-image" style="height:265px;background-color:#e1f3fa"><img src="../../partials/images/design/cubcon/back.png"></div>
-      <div class="third-image" style="background-color:#b1e3f7;margin-bottom:150px"><img src="../../partials/images/design/cubcon/laptop.png" style="width:250px"></div>
-      <div class="third-image" style="background-color:#e1f3fa;margin-bottom:150px"><img src="../../partials/images/design/cubcon/title.png" style="width:250px"></div>
-      <div class="third-image" style="background-color:#b1e3f7;margin-bottom:150px"><img src="../../partials/images/design/cubcon/rocket.png" style="width:120px"></div>
+      <div class="third-image" style="background-color:#b1e3f7"><img src="../../partials/images/design/cubcon/laptop.png" style="width:250px"></div>
+      <div class="third-image" style="background-color:#e1f3fa"><img src="../../partials/images/design/cubcon/title.png" style="width:250px"></div>
+      <div class="third-image" style="background-color:#b1e3f7"><img src="../../partials/images/design/cubcon/rocket.png" style="width:120px"></div>
+      <div class="back-button">
+        <a href="../design.html" class="back-hover">
+          <i class="fa fa-chevron-up buffer" aria-hidden="true"></i>
+          <br>
+          <div class="eighteen">back to design</div>
+        </a>
+      </div>
   </div>
 </body>
