--- a/design/content/doodles.html
+++ b/design/content/doodles.html
@@ -46,6 +46,14 @@
         belong to a category or series, but were fun to create nonetheless.
       </h4>
       <div class="full-image"><img src="../../partials/images/design/handson.png"></div>
-      <div class="half-image" style="background-color:#a9d396;margin-bottom:150px"><img src="../../partials/images/design/doodles/avocado.png" style="width:400px"></div>
+      <div class="half-image" style="background-color:#a9d396"><img src="../../partials/images/design/doodles/avocado.png" style="width:400px"></div>
+      <div class="half-image" style="background-color:#E8E8E8"><img src="../../partials/images/design/doodles/wip.png" class="height"></div>
+      <div class="back-button">
+        <a href="../design.html" class="back-hover">
+          <i class="fa fa-chevron-up buffer" aria-hidden="true"></i>
+          <br>
+          <div class="eighteen">back to design</div>
+        </a>
+      </div>
   </div>
 </body>
