--- a/design/content/innod.html
+++ b/design/content/innod.html
@@ -56,7 +56,14 @@
       <div class="half-image" style="background-color:#c7e3d4"><img src="../../partials/images/design/innod/dark_mountain.png" style="width:340px"></div>
       <div class="half-image" style="background-color:#add8bf"><img src="../../partials/images/design/innod/light_mountain.png" style="width:340px"></div>
       <div class="full-image" style="height:320px"><img src="../../partials/images/design/innod/flyersall.png"></div>
-      <div class="half-image" style="background-color:#96cdb0;margin-bottom:150px"><img src="../../partials/images/design/innod/valentine.png" style="width:610px"></div>
-      <div class="half-image" style="background-color:#c7e3d4;margin-bottom:150px"><img src="../../partials/images/design/innod/hex.png" style="width:340px"></div>
+      <div class="half-image" style="background-color:#96cdb0"><img src="../../partials/images/design/innod/valentine.png" style="width:610px"></div>
+      <div class="half-image" style="background-color:#c7e3d4"><img src="../../partials/images/design/innod/hex.png" style="width:340px"></div>
+      <div class="back-button">
+        <a href="../design.html" class="back-hover">
+          <i class="fa fa-chevron-up buffer" aria-hidden="true"></i>
+          <br>
+          <div class="eighteen">back to design</div>
+        </a>
+      </div>
   </div>
 </body>
