--- a/design/content/sushi.html
+++ b/design/content/sushi.html
@@ -48,6 +48,13 @@
       </h4>
       <div class="half-image" style="background-color:#d2ece8"><img src="../../partials/images/design/dragon.png" class="height"></div>
       <div class="half-image" style="background-color:#d2ece8"><img src="../../partials/images/design/sushi/dragon_roll.png" style="width:400px;background-color:#d2ece8"></div>
-      <div class="full-image" style="height:130px;margin-bottom:150px"><img src="../../partials/images/design/sushi/takeout-min.png"></div>
+      <div class="full-image" style="height:130px"><img src="../../partials/images/design/sushi/takeout-min.png"></div>
+      <div class="back-button">
+        <a href="../design.html" class="back-hover">
+          <i class="fa fa-chevron-up buffer" aria-hidden="true"></i>
+          <br>
+          <div class="eighteen">back to design</div>
+        </a>
+      </div>
   </div>
 </body>
