--- a/prototyping/content/drawing.html
+++ b/prototyping/content/drawing.html
@@ -61,5 +61,12 @@
         When light shines on the photorsistor, the motot is activated, thus
         turning the gear to move the pen at the end of the arm. In this way, the undulating circular patterns shown below are created.
     </div>
-    <div class="full-image" style="margin-bottom:150px"><img src="../../partials/images/prototyping/drawing/final.png"></div>
+    <div class="full-image"><img src="../../partials/images/prototyping/drawing/final.png"></div>
+    <div class="back-button">
+      <a href="../prototyping.html" class="back-hover">
+        <i class="fa fa-chevron-up buffer" aria-hidden="true"></i>
+        <br>
+        <div class="eighteen">back to prototyping</div>
+      </a>
+    </div>
 </div>
