--- a/prototyping/content/kirigami.html
+++ b/prototyping/content/kirigami.html
@@ -55,5 +55,12 @@
         attached the ends to a motor. This motor was controlled by an Ardunio Uno programmed to simply
         provide and release tension cyclically, thus resulting in a breathing motion of the paper folds.
     </div>
-    <div class="full-image" style="margin-bottom:150px"><img src="../../partials/images/prototyping/kirigami/thread.png"></div>
+    <div class="full-image"><img src="../../partials/images/prototyping/kirigami/thread.png"></div>
+    <div class="back-button">
+      <a href="../prototyping.html" class="back-hover">
+        <i class="fa fa-chevron-up buffer" aria-hidden="true"></i>
+        <br>
+        <div class="eighteen">back to prototyping</div>
+      </a>
+    </div>
 </div>
