--- a/prototyping/content/mo.html
+++ b/prototyping/content/mo.html
@@ -130,9 +130,16 @@
         <div class="third-image" style="height:200px"><img src="../../partials/images/prototyping/mo/glow_1.png"></div>
         <div class="third-image" style="height:200px"><img src="../../partials/images/prototyping/mo/neo.png"></div>
         <div class="third-image" style="height:200px"><img src="../../partials/images/prototyping/mo/glow_2.png"></div>
-        <div class="content-text" style="padding-bottom:150px">
+        <div class="content-text">
             Special thanks to the team and resources at the <a href="http://invent.citris-uc.org/" target="_blank">CITRIS Invention Lab</a> for the support and assistance that
             made this project possible and for giving me a lab to call home for the semester!
+        </div>
+        <div class="back-button">
+          <a href="../prototyping.html" class="back-hover">
+            <i class="fa fa-chevron-up buffer" aria-hidden="true"></i>
+            <br>
+            <div class="eighteen">back to prototyping</div>
+          </a>
         </div>
 
 </div>
