--- a/code/content/personalsite.html
+++ b/code/content/personalsite.html
@@ -50,7 +50,14 @@
       Things to look forward to: command-line inspired user interface, more hidden animations,
       and enhanced responsiveness.
     </h4>
-    <div class="full-image" style="margin-bottom:150px"><img src="../../partials/images/code/personal.png"></div>
+    <div class="full-image"><img src="../../partials/images/code/personal.png"></div>
+    <div class="back-button">
+      <a href="../code.html" class="back-hover">
+        <i class="fa fa-chevron-up buffer" aria-hidden="true"></i>
+        <br>
+        <div class="eighteen">back to code</div>
+      </a>
+    </div>
 
 
 </div>
