--- a/design/content/berkeleymap.html
+++ b/design/content/berkeleymap.html
@@ -48,6 +48,13 @@
       </h4>
       <div class="full-image" style="background-color:#b0d3ab;height:400px"><img src="../../partials/images/design/innod/doe.png"></div>
       <div class="full-image" style="background-color:#b0d3ab;height:400px"><img src="../../partials/images/design/innod/south.png"></div>
-      <div class="full-image" style="background-color:#b0d3ab;height:400px;margin-bottom:150px"><img src="../../partials/images/design/innod/tech.png"></div>
+      <div class="full-image" style="background-color:#b0d3ab;height:400px"><img src="../../partials/images/design/innod/tech.png"></div>
+      <div class="back-button">
+        <a href="../design.html" class="back-hover">
+          <i class="fa fa-chevron-up buffer" aria-hidden="true"></i>
+          <br>
+          <div class="eighteen">back to design</div>
+        </a>
+      </div>
   </div>
 </body>
