--- a/design/content/feaster.html
+++ b/design/content/feaster.html
@@ -50,7 +50,14 @@
       <div class="full-image" style="background-color:#edb7bf"><img src="../../partials/images/design/feaster.png"></div>
       <div class="full-image" style="background-color:;height:300px"><img src="../../partials/images/design/feaster/cover.png"></div>
       <div class="full-image" style="background-color:;height:300px"><img src="../../partials/images/design/feaster/cover2.png"></div>
-      <div class="half-image" style="margin-bottom:150px;height:285px"><img src="../../partials/images/design/feaster/feaster4.png"></div>
-      <div class="half-image" style="margin-bottom:150px;height:285px"><img src="../../partials/images/design/feaster/feaster4.png"></div>
+      <div class="half-image" style="height:285px"><img src="../../partials/images/design/feaster/feaster4.png"></div>
+      <div class="half-image" style="height:285px"><img src="../../partials/images/design/feaster/feaster4.png"></div>
+      <div class="back-button">
+        <a href="../design.html" class="back-hover">
+          <i class="fa fa-chevron-up buffer" aria-hidden="true"></i>
+          <br>
+          <div class="eighteen">back to design</div>
+        </a>
+      </div>
   </div>
 </body>
