--- a/design/content/page1.html
+++ b/design/content/page1.html
@@ -83,5 +83,12 @@
         </div>
         <div class="full-image" style="height:300px"><img src="../../partials/images/design/calhacks/chcountdown4.png"></div>
         <div class="full-image" style="height:300px"><img src="../../partials/images/design/calhacks/chcountdown3.png"></div>
-        <div class="full-image" style="height:300px;margin-bottom:150px"><img src="../../partials/images/design/calhacks/chcountdown2.png"></div>
+        <div class="full-image" style="height:300px"><img src="../../partials/images/design/calhacks/chcountdown2.png"></div>
+        <div class="back-button">
+          <a href="../design.html" class="back-hover">
+            <i class="fa fa-chevron-up buffer" aria-hidden="true"></i>
+            <br>
+            <div class="eighteen">back to design</div>
+          </a>
+        </div>
 </div>
