--- a/prototyping/content/pond.html
+++ b/prototyping/content/pond.html
@@ -64,5 +64,12 @@
     </div>
     <div class="half-image" style="height:300px"><img src="../../partials/images/prototyping/pond/two.png"></div>
     <div class="half-image" style="height:300px"><img src="../../partials/images/prototyping/pond/four.png"></div>
-    <div class="full-image" style="margin-bottom:150px"><img src="../../partials/images/prototyping/pond/holes.png"></div>
+    <div class="full-image"><img src="../../partials/images/prototyping/pond/holes.png"></div>
+    <div class="back-button">
+      <a href="../prototyping.html" class="back-hover">
+        <i class="fa fa-chevron-up buffer" aria-hidden="true"></i>
+        <br>
+        <div class="eighteen">back to prototyping</div>
+      </a>
+    </div>
 </div>
