--- a/about/about.html
+++ b/about/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>About - Adriana Babakanian</title>
+  <title>About | Adriana Babakanian</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
@@ -46,7 +46,7 @@
 </head>
 <body>
 
-    <div class="container" style="display:none;width:900px">
+    <div class="container about-cont" style="display:none">
         <a href="../index.html"class="close lavender" style="color:white">
             <i class="fa fa-close close-icon"></i>
         </a>
@@ -108,7 +108,7 @@
             </a>
         </div>
         <div class="clearfix"></div>
-        <div style="margin-top:150px">
+        <div class="container" style="margin-top:150px">
             <div class="line"></div>
             <div class="resume-section"> Education </div>
 
