--- a/code/content/stubhub.html
+++ b/code/content/stubhub.html
@@ -56,8 +56,8 @@
       testing, cross-browser quality assurance, loacalization, and several external SDKs in both
       Web and mobile Web.
     </h4>
-        <div class="half-image" style="height:620px;background:#75c4bd"><img src="../../partials/images/code/stubhub/com1.png" style="width:70%"></div>
-        <div class="half-image" style="height:620px;background:#75c4bd"><img src="../../partials/images/code/stubhub/com2.png" style="width:70%"></div>
+        <div class="half-image st" style="background:#75c4bd"><img src="../../partials/images/code/stubhub/com1.png" style="width:70%"></div>
+        <div class="half-image st" style="background:#75c4bd"><img src="../../partials/images/code/stubhub/com2.png" style="width:70%"></div>
         <div class="content-text">
             The main goal of the community feature is to collect user-generated content
             and then utilize it to augment the end-to-end user experience. I worked closely
