--- a/design/content/innod.html
+++ b/design/content/innod.html
@@ -55,7 +55,7 @@
       <div class="half-image" style="background-color:#a9dae7"><img src="../../partials/images/design/innod/thankyou.png"></div>
       <div class="half-image" style="background-color:#c7e3d4"><img src="../../partials/images/design/innod/dark_mountain.png" style="width:340px"></div>
       <div class="half-image" style="background-color:#add8bf"><img src="../../partials/images/design/innod/light_mountain.png" style="width:340px"></div>
-      <div class="full-image" style="height:320px"><img src="../../partials/images/design/innod/flyersall.png"></div>
+      <div class="full-image th"><img src="../../partials/images/design/innod/flyersall.png"></div>
       <div class="half-image" style="background-color:#96cdb0"><img src="../../partials/images/design/innod/valentine.png" style="width:610px"></div>
       <div class="half-image" style="background-color:#c7e3d4"><img src="../../partials/images/design/innod/hex.png" style="width:340px"></div>
       <div class="back-button">
