--- a/design/design.html
+++ b/design/design.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Design - Adriana Babakanian</title>
+  <title>Design | Adriana Babakanian</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
@@ -65,7 +65,7 @@
     </h4>
 
   <!-- </div> -->
-        <a href="content/page1.html" class="transition">
+        <a href="content/calhacks.html" class="transition">
           <div class="preview" style="background-color:#c9d1eb">
               <div class="preview-layover">
                   CAL HACKS 4.0
