--- a/design/content/berkeleymap.html
+++ b/design/content/berkeleymap.html
@@ -46,9 +46,9 @@
         illustrated thus far, which were featured in a flyer I made for Cal Day along with some other
         memembers of my design club for a marketing project.
       </h4>
-      <div class="full-image" style="background-color:#b0d3ab;height:400px"><img src="../../partials/images/design/innod/doe.png"></div>
-      <div class="full-image" style="background-color:#b0d3ab;height:400px"><img src="../../partials/images/design/innod/south.png"></div>
-      <div class="full-image" style="background-color:#b0d3ab;height:400px"><img src="../../partials/images/design/innod/tech.png"></div>
+      <div class="full-image fh" style="background-color:#b0d3ab"><img src="../../partials/images/design/innod/doe.png"></div>
+      <div class="full-image fh" style="background-color:#b0d3ab"><img src="../../partials/images/design/innod/south.png"></div>
+      <div class="full-image fh" style="background-color:#b0d3ab"><img src="../../partials/images/design/innod/tech.png"></div>
       <div class="back-button">
         <a href="../design.html" class="back-hover">
           <i class="fa fa-chevron-up buffer" aria-hidden="true"></i>
