--- a/design/content/calhacks.html
+++ b/design/content/calhacks.html
@@ -48,7 +48,7 @@
     </h4>
         <div class="full-image"><img src="../../partials/images/design/chroadtrip.png"></div>
         <div class="content-text">
-            Every iteration of Cal Hacks gets dressed in a new bear named <a>dd0ski</a> that represents UC Berkeley's mascot Oski.
+            Every iteration of Cal Hacks getsw dressed in a new bear named <a>dd0ski</a> that represents UC Berkeley's mascot Oski.
             I designed the Cal Hacks 4.0 dd0ski &mdash; this little guy was featured on thousands of shirts, swag bags, badges,
             wristbands, and more!
         </div>
@@ -74,16 +74,16 @@
             The hackathon itself was 36 hours straight, filled with lots of moving boxes, distributing food, helping hackers,
             making sure sponsors felt at home, and hanging out with everyone who stopped by (even some four-legged friends!)
         </div>
-        <div class="half-image" style="height:530px"><img src="../../partials/images/design/calhacks/truck.png"></div>
-        <div class="half-image" style="height:530px"><img src="../../partials/images/design/calhacks/corgi.png"></div>
+        <div class="half-image iphone"><img src="../../partials/images/design/calhacks/truck.png"></div>
+        <div class="half-image iphone"><img src="../../partials/images/design/calhacks/corgi.png"></div>
         <div class="content-text">
             We put in a lot of marketing effort in the months leading up to Cal Hacks, resulting in over 4000 applications from
             hackers around the globe! The week before the hackathon, I created some countdown graphics to post daily on our
             <a href="https://www.facebook.com/CalHacks/?ref=bookmarks" target="_blank"> Facebook page</a> honoring our California heritage, corporate sponsors, and hackathon fuel sponsors!
         </div>
-        <div class="full-image" style="height:300px"><img src="../../partials/images/design/calhacks/chcountdown4.png"></div>
-        <div class="full-image" style="height:300px"><img src="../../partials/images/design/calhacks/chcountdown3.png"></div>
-        <div class="full-image" style="height:300px"><img src="../../partials/images/design/calhacks/chcountdown2.png"></div>
+        <div class="full-image th"><img src="../../partials/images/design/calhacks/chcountdown4.png"></div>
+        <div class="full-image th"><img src="../../partials/images/design/calhacks/chcountdown3.png"></div>
+        <div class="full-image th"><img src="../../partials/images/design/calhacks/chcountdown2.png"></div>
         <div class="back-button">
           <a href="../design.html" class="back-hover">
             <i class="fa fa-chevron-up buffer" aria-hidden="true"></i>
