--- a/design/content/feaster.html
+++ b/design/content/feaster.html
@@ -48,8 +48,8 @@
         being used.
       </h4>
       <div class="full-image" style="background-color:#edb7bf"><img src="../../partials/images/design/feaster.png"></div>
-      <div class="full-image" style="background-color:;height:300px"><img src="../../partials/images/design/feaster/cover.png"></div>
-      <div class="full-image" style="background-color:;height:300px"><img src="../../partials/images/design/feaster/cover2.png"></div>
+      <div class="full-image th"><img src="../../partials/images/design/feaster/cover.png"></div>
+      <div class="full-image th"><img src="../../partials/images/design/feaster/cover2.png"></div>
       <div class="half-image" style="height:285px"><img src="../../partials/images/design/feaster/feaster4.png"></div>
       <div class="half-image" style="height:285px"><img src="../../partials/images/design/feaster/feaster4.png"></div>
       <div class="back-button">
