--- a/about/about.html
+++ b/about/about.html
@@ -52,9 +52,12 @@
         </a>
         <div class="about-elem about-text">
             <span style="font-size: 20px;">Nice to meet you! <br>I'm <b class="hov">Adriana Babakanian</b>, a third-year
-            Regents' Scholar at the <em class="hov">University of California, Berkeley</em>
-            pursuing a double major in <em class="hov">Applied Mathematics</em> and <em class="hov">Computer
-            Science</em>.</span>
+            Regents' Scholar at the <a href="http://www.berkeley.edu/" target="_blank">
+            <em class="hov">University of California, Berkeley</em></a>
+            pursuing a double major in
+            <a href="https://math.berkeley.edu/" target="_blank"><em class="hov">Applied Mathematics</em></a>
+            and <a href="https://cs.berkeley.edu/" target="_blank"><em class="hov">Computer
+            Science</em></a>.</span>
             <br>
             <br>
             I have a keen passion for creating, especially when it comes to
